--- a/Problema/index.html
+++ b/Problema/index.html
@@ -150,36 +150,33 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi inventore veniam, alias porro aspernatur neque repellendus laudantium hic nesciunt voluptatibus quisquam eum sint fugit soluta voluptate reprehenderit vitae! Alias, ut.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam numquam facilis quidem repudiandae non, libero reprehenderit ea! Maxime assumenda laboriosam, ex, perferendis possimus illum molestiae! Tempore ea velit hic quibusdam.</p>
         
-          <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-              <span class="sr-only">40% Complete (success)</span>
+          <div class="bar">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 98%;">
+                </div>
             </div>
-            <p>HTML</p>
-          </div>
-          <div class="progress">
-            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-              <span class="sr-only">20% Complete</span>
+            <h5>HTML</h5>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                </div>
             </div>
-            <p>CSS</p>
-          </div>
-          <div class="progress">
-            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-              <span class="sr-only">60% Complete (warning)</span>
+            <h5>CSS</h5>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                </div>
             </div>
-            <p>JAVASCRIPT</p>
-          </div>
-          <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-              <span class="sr-only">80% Complete (danger)</span>
+            <h5>JAVASCRIPT</h5>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                </div>
             </div>
-          </div>
-          <p>PHP</p>
-          <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-              <span class="sr-only">80% Complete (danger)</span>
+            <h5>PHP</h5>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                </div>
             </div>
+            <h5>PHOTOSHOP/ILLUSTRATOR</h5>
           </div>
-          <p>PHOTOSHOP/ILLUSTRATOR</p>
         </div>
         <div class="col-md-6 about-row">
           <div class="img-about">
@@ -194,6 +191,41 @@
       <h1>WHAT WE DO</h1>
       <hr>
       <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod</p>
+      <div class="row">
+        <div class="col-md-4 box-col">
+          <div class="box-a">
+            <a href="#">
+              <img src="img/icons/webdesign.png">
+              <h2>Web Design</h2>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, nesciunt! Ducimus blanditiis deserunt dolores dicta. Pariatur reprehenderit, ab vel commodi reiciendis aspernatur minus asperiores, voluptas.</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 box-col">
+          <div class="box-a">
+            <a href="#">
+              <img src="img/icons/graphicdesign.png">
+              <h2>Graphic Design</h2>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, nesciunt! Ducimus blanditiis deserunt dolores dicta. Pariatur reprehenderit, ab vel commodi reiciendis aspernatur minus asperiores, voluptas.</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 box-col">
+          <div class="box-a">
+            <a href="#">
+              <img src="img/icons/mobile.png">
+              <h2>Mobile App </h2>
+              <hr>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, nesciunt! Ducimus blanditiis deserunt dolores dicta. Pariatur reprehenderit, ab vel commodi reiciendis aspernatur minus asperiores, voluptas.</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="boton-suscribe text-center">
+        <button class="btn btn-danger" type="button">HIRE US NOW!</button>
+      </div>
     </div>
   </section>
   <section class="team">
@@ -204,39 +236,249 @@
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod</p>
       </div>
       <div class="row">
-        <div class="col-md-4 team-img">
+        <div class="col-md-3 team-img">
           <img src="img/team/1.jpg">
           <h2>Jane Doe</h2>
           <p>CEO / Founder</p>
           <hr>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, aliquid alias. Placeat eligendi consequuntur accusantium harum corporis magni vero officiis minima fugiat, vel sequi repellat error officia culpa labore quia.</p>
-          <i class=""></i>
-          <i class=""></i>
-          <i class=""></i>
-          <i class=""></i>
-          <i class=""></i>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
         </div>
-        <div class="col-md-4 team-img">
+        <div class="col-md-3 team-img">
           <img src="img/team/1.jpg">
           <h2>Jane Doe</h2>
           <p>CEO / Founder</p>
           <hr>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, aliquid alias. Placeat eligendi consequuntur accusantium harum corporis magni vero officiis minima fugiat, vel sequi repellat error officia culpa labore quia.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
         </div>
-        <div class="col-md-4 team-img">
+        <div class="col-md-3 team-img">
           <img src="img/team/1.jpg">
           <h2>Jane Doe</h2>
           <p>CEO / Founder</p>
           <hr>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, aliquid alias. Placeat eligendi consequuntur accusantium harum corporis magni vero officiis minima fugiat, vel sequi repellat error officia culpa labore quia.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
+        </div>
+        <div class="col-md-3 team-img">
+          <img src="img/team/1.jpg">
+          <h2>Jane Doe</h2>
+          <p>CEO / Founder</p>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, aliquid alias. Placeat eligendi consequuntur accusantium harum corporis magni vero officiis minima fugiat, vel sequi repellat error officia culpa labore quia.</p>
+          <i class="fa fa-facebook-square"></i>
+          <i class="fa fa-twitter-square"></i>
+          <i class="fa fa-linkedin-square"></i>
+          <i class="fa fa-pinterest-square"></i>
+          <i class="fa fa-instagram"></i>
         </div>
       </div>
     </div>
   </section>
+  <section class="best-price-guranteed">
+    <div class="container">
+      <h1>BEST PRICE GURANTEED</h1>
+      <hr>
+      <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod</p>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="box-precios">
+            <h3 class="bg-active">STARTER</h3>
+            <div class="box-dolar">
+              <span>$10</span><span>/MO</span>
+              <p>1 month FREE trial</p>
+            </div>
+            <div class="list-group bg-active">
+              <p>2 GB Disk Space</p>
+              <p class="bg-p">10 GB Bandwith</p>
+              <p>1 Databases</p>
+              <p class="bg-p">Daily Backup</p>
+              <p>1 Domains</p>
+              <p class="bg-p">24h Support</p>
+            </div>
+            <button type="submit" class="btn btn-default submit">Sign up</button>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="box-precios">
+            <h3>BASIC</h3>
+            <div class="box-dolar">
+              <span>$15</span><span>/MO</span>
+              <p>1 month FREE trial</p>
+            </div>
+            <div class="list-group">
+              <p>5 GB Disk Space</p>
+              <p class="bg-p">20 GB Bandwith</p>
+              <p>5 Databases</p>
+              <p class="bg-p">Daily Backup</p>
+              <p>5 Domains</p>
+              <p class="bg-p">24h Support</p>
+            </div>
+            <button type="submit" class="btn btn-default submit">Sign up</button>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="box-precios">
+            <h3>FEATURE</h3>
+            <div class="box-dolar">
+              <span>$25</span><span>/MO</span>
+              <p>1 month FREE trial</p>
+            </div>
+            <div class="list-group">
+              <p>10 GB Disk Space</p>
+              <p class="bg-p">30 GB Bandwith</p>
+              <p>10 Databases</p>
+              <p class="bg-p">Daily Backup</p>
+              <p>10 Domains</p>
+              <p class="bg-p">24h Support</p>
+            </div>
+            <button type="submit" class="btn btn-default submit">Sign up</button>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="box-precios">
+            <h3>PROFESSIONAL</h3>
+            <div class="box-dolar">
+              <span>$35</span><span>/MO</span>
+              <p>1 month FREE trial</p>
+            </div>
+            <div class="list-group">
+              <p>15 GB Disk Space</p>
+              <p class="bg-p">40 GB Bandwith</p>
+              <p>15 Databases</p>
+              <p class="bg-p">Daily Backup</p>
+              <p>15 Domains</p>
+              <p class="bg-p">24h Support</p>
+            </div>
+            <button type="submit" class="btn btn-default submit">Sign up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="clients-say">
+    <div class="container">
+      <h1>WHAT OUR CLIENTS SAY</h1>
+      <hr>
+      <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod</p>
+      <div class="box-p mt-50">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dignissimos et voluptatem vel rem fugit quos fuga? Repellendus dicta reiciendis, laudantium velit. Eaque, similique dolorum enim nostrum, aliquam odio corporis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ducimus sint dolore.</p>
+        <p class="autor">- Automotive Company</p>
+      </div>
+      <div class="box-p">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dignissimos et voluptatem vel rem fugit quos fuga? Repellendus dicta reiciendis, laudantium velit. Eaque, similique dolorum enim nostrum, aliquam odio corporis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ducimus sint dolore.</p>
+        <p class="autor">- XPedius Aerospace</p>
+      </div>
+      <div class="box-p">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dignissimos et voluptatem vel rem fugit quos fuga? Repellendus dicta reiciendis, laudantium velit. Eaque, similique dolorum enim nostrum, aliquam odio corporis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ducimus sint dolore.</p>
+        <p class="autor">- CKPit Solution</p>
+      </div>
+    </div>
+  </section>
+  <section class="formulario">
+    <div class="container">
+      <h1>GET IN TOUCH</h1>
+      <hr>
+      <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod</p>
+      <div class="form-contact">
+        <form class="form-inline">
+          <div class="form-group">
+            <input type="email" size="1px" class="form-control mt-50" id="exampleInputEmail3" placeholder="Name*">
+            <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email*">
+            <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Phone">
+            <textarea class="form-control" placeholder="Message*" rows="10"></textarea>
+            <button type="submit" class="btn btn-default submit">Submit</button>
+          </div>
+          <p class="text-left">*Required</p>
+        </form>
+      </div>
+    </div>
+  </section>
+  <section class="redes">
+    <div class="container">
+      <div class="box-redes">
+        <i class="fa fa-facebook-square"></i>
+        <i class="fa fa-twitter-square"></i>
+        <i class="fa fa-linkedin-square"></i>
+        <i class="fa fa-pinterest-square"></i>
+        <i class="fa fa-google-plus-square"></i>
+        <i class="fa fa-tumblr-square"></i>
+        <i class="fa fa-instagram"></i>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 col-md-offset-1 box-footer">
+          <h3>Visit Us</h3>
+          <hr>
+          <p>
+            <i class="fa fa-location-arrow"></i> 
+            10 Lorem Ipsum Street
+          </p>
+          <p>
+            <i class="fa fa-map-marker"></i> 
+            68123 Mannheim
+          </p>
+          <p>
+            <i class="fa fa-flag"></i> 
+            Germany
+          </p>
+        </div>
+        <div class="col-md-2 col-md-offset-2 box-footer">
+          <h3>Write Us</h3>
+          <hr>
+          <p>
+            <i class="fa fa-phone"></i> 
+            +49 621 123 321 123
+          </p>
+          <p>
+            <i class="fa fa-envelope"></i> 
+            info@fabianbentz.de
+          </p>
+          <p>
+            <i class="fa fa-print"></i> 
+            +49 621 123 321 124
+          </p>
+        </div>
+        <div class="col-md-3 col-md-offset-1 box-footer">
+          <h3>Newsletter</h3>
+          <hr>
+          <form role="form">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-danger" type="button"><i class="fa fa-envelope"></i></button>
+              </span>
+              <input type="text" class="form-control" autocomplete="off" placeholder="Enter email">
+            </div>
+            <div class="boton-suscribe text-center">
+              <button class="btn btn-danger" type="button">Suscribe Now!</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <span class="copy">&copy; 2013 ThreeSixty Website Template. </span><span><a class="style-p" href="#">Privacy Terms</a></span>
+      <span class="back"><a href="index.html">Back to top</a></span>
+    </div>
+  </footer>
 
 <!-- BOOTSTRAP JAVASCRIPT -->
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="./js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
